enum FaultFindingStatus {
    PENDING
    APPROVED
    REJECTED
}

model Room {
  id            String   @id @default(uuid())
  title         String
  description   String?
  address       String
  city          String
  pricePerNight Decimal  @db.Decimal(10, 2)
  maxGuests     Int
  status        FaultFindingStatus   @default(PENDING)

  images        RoomImage[]
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  hostId        String
  host          User     @relation(fields: [hostId], references: [id], onDelete: Cascade)
  
  bookings      Booking[]
  reviews       Review[]
}
