enum ROLE {
    USER
    HOST
    ADMIN
}

model User {
    id  String  @id @default(uuid())
    email   String  @unique
    verifiedAt  DateTime?
    verifyToken String? @unique
    password    String
    fullName    String
    phoneNumber  String?
    role    ROLE    @default(USER)

    bannedAt   DateTime?
    banExpiresAt DateTime?
    banReason  String?

    createdAt    DateTime    @default(now())
    updatedAt   DateTime    @updatedAt

    passwordResetToken  PasswordResetToken[]

    rooms   Room[]
    bookings    Booking[]

    reviews     Review[]
}
